test: Added integration tests for security implemntation - Added H2 test database config with JWT secret in test appliaction.properties - Added null for createdBy field in test data - Set expected HTTP status code to 403